# aerial_inspection_planner

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
config/: config.rviz  cpp_planner.yaml
data/meshes/: mocap.stl
docker/: external.Dockerfile  notes.md
include/aerial_inspection_planner/: bvh.hpp  cpp_planner.hpp  mesh_utils.hpp
include/tsp_solvers/: ortools.hpp
launch/: cpp_planner_launch.py
src/: bvh.cpp  cpp_planner.cpp  mesh_utils.cpp
test/: planner_test.cpp
